--- a/vignettes/advanced.Rmd
+++ b/vignettes/advanced.Rmd
@@ -1,8 +1,10 @@
 ---
 title: "Advanced flashier"
 author: "Jason Willwerscheid"
-date: "07/15/2019"
-output: rmarkdown::html_vignette
+date: "02/21/2022"
+output: 
+  rmarkdown::html_vignette:
+    toc: true
 vignette: >
   %\VignetteIndexEntry{advanced flashier}
   %\VignetteEngine{knitr::rmarkdown}
@@ -13,220 +15,289 @@ vignette: >
 knitr::opts_chunk$set(echo = TRUE, collapse = TRUE, comment = "#>",
                       fig.width = 6, fig.height = 6, warning = FALSE)
 library(flashier)
-```
-  
-The main `flashier` function is essentially a wrapper for the `flash.workhorse` function, which has a few dozen additional parameters that make the fitting process highly customizable. The purpose of this vignette is to give a tour of these options. Be forewarned: many of them are experimental and have not been exhaustively tested.
-  
-  
-## Initializing several factors at once
-  
-Recall that the default `flashier` method adds factors one at a time, optimizing them individually along the way. One can then do a final backfit to further improve the model fit.
-  
-One might instead like to add several factors at once (without optimizing) and then do a single backfit.
-  
-```{r init.EF}
-svd.factors <- svd(gtex, nu = 5, nv = 5)
-EF.init <- list(rep(svd.factors$d[1:5], each = nrow(gtex)) * svd.factors$u,
-svd.factors$v)
-class(EF.init) <- "lowrank"
-svd.time <- system.time(
-  gtex.svd <- flashier(gtex, var.type = 1, EF.init = EF.init, fit = "backfit.only",
-                       verbose.lvl = 0)
-)
-greedy.time <- system.time(
-  gtex.greedy <- flashier(gtex, greedy.Kmax = 5, var.type = 1, fit = "full",
-                          verbose.lvl = 0)
-)
-c(gtex.svd$elbo, gtex.greedy$elbo)
-c(svd.time[3], greedy.time[3])
-```
-
-
-## Fitting factors with fixed sparsity patterns
-
-In the introductory vignette, sparsity patterns emerged in several of the tissue loadings. In the `gtex.greedy` fit from the previous section, factor 3 is primarily loaded on whole blood, spleen, lung, and lymphocytes; factor 4 is loaded on heart and muscle tissues; and factor 5 is loaded on esophagus mucosa and skin tissues. Let's say that one had prior knowledge of these patterns before fitting. One can fix the loadings on other tissues at zero as follows.
-
-```{r fixed}
-tissues <- colnames(gtex)
-factor3.tissues <- pmatch(c("Whole", "Spleen", "Lung", "Cells_EBV"), tissues)
-factor4.tissues <- pmatch(c("Heart_A", "Heart_L", "Muscle"), tissues)
-factor5.tissues <- pmatch(c("Esophagus_Muc", "Skin_N", "Skin_S"), tissues)
-
-gtex.fixed <- flashier(gtex, greedy.Kmax = 2, var.type = 1, fit = "full",
-                       fixed.factors = fixed.sparse(n = 2,
-                                                    nz.idx = list(factor3.tissues,
-                                                                  factor4.tissues,
-                                                                  factor5.tissues)))
-```
-
-Note that `greedy.Kmax` does not count fixed factors, so that two "greedy" factors are added on top of the three factors with fixed sparsity patterns. Note also that, by default, `flashier` does not nullcheck the fixed factors (this behavior is set by parameter `nullchk.fixed.factors`).
-
-The resulting tissue loadings appear as follows.
-
-```{r plot.fixed}
 library(ggplot2)
+```
 
-plot.tissue.loadings <- function(flash) {
-  vals <- flash$loadings.pm[[2]]
+## Introduction
+
+In addition to the main `flash` function, `flashier` provides a collection of pipeable `flash.xxx` functions. Any call to `flash` can be rewritten using these functions, which make the individual fitting operations more explicit and also provide many more options. For example, the following are equivalent:
+
+```{r adv_interface}
+# Basic interface:
+gtex.bf <- flash(
+    gtex,
+    greedy.Kmax = 5,
+    var.type = 1,
+    backfit = TRUE,
+    verbose = 0
+  )
+
+# Pipeable interface:
+bf.time <- system.time(
+  gtex.bf <- flash.init(gtex, var.type = 1) %>%
+    flash.set.verbose(verbose = 0) %>%
+    flash.add.greedy(Kmax = 5) %>%
+    flash.backfit() %>%
+    flash.nullcheck()
+)
+```
+
+Function `flash.init` sets up the `flash` object and handles global parameters; `flash.set.verbose` determines the output that will be printed to console; and the remaining functions perform the greedy, backfitting, and nullcheck operations discussed in the introductory vignette.
+
+Below, some useful recipes are provided that illustrate some of the flexibility of the pipeable interface. In all examples, I use the same GTEx dataset and plotting function that was used in the introductory vignette:
+
+```{r plot.fn}
+data(gtex, gtex.colors)
+
+plot.factors <- function(fl) {
+  vals <- apply(fl$F.pm, 2, function(x) x / sqrt(sum(x^2)))
+  
   data <- reshape2::melt(vals)
   min.val <- min(0, min(vals))
   max.val <- max(0, max(vals))
   
   colnames(data) <- c("variable", "k", "value")
   data$k <- as.factor(data$k)
-  ggplot(data, aes_string(x = "variable", 
-                          y = "value", 
-                          fill = "variable")) +
+  ggplot(data, aes_string(x = "variable", y = "value", fill = "variable")) +
     geom_bar(stat = "identity", width = 0.6) +
     scale_fill_manual(values = gtex.colors) +
     scale_x_discrete(labels = NULL) +
     ylim(min.val, max.val) +
     theme_grey() +
-    theme(legend.position="right",
-          legend.text = element_text(size = 3.25),
-          legend.title = element_blank()) +
+    theme(
+      legend.position = "right",
+      legend.text = element_text(size = 6),
+      legend.title = element_blank()
+    ) +
     labs(y = "", x = "") +
     facet_wrap(~k, ncol = 2) +
-    guides(fill = guide_legend(ncol = 1, 
-                               keyheight = 3.25 / 6, 
-                               keywidth = 3.25 / 15))
+    guides(fill = guide_legend(
+      ncol = 1, 
+      keyheight = 3.75 / 6, 
+      keywidth = 3.75 / 15)
+    )
 }
-
-plot.tissue.loadings(gtex.fixed)
 ```
 
+## Troubleshooting: turn off extrapolation
 
-## Customizing verbose output
+To accelerate backfits, `flashier` uses an "extrapolation" technique inspired by Ang and Gillis (2018). While this can dramatically improve runtime for large datasets, it can be finicky and occasionally results in errors that are difficult to track down. To turn off extrapolation, set `extrapolate = FALSE` in the call to `flash.backfit`:
 
-The main parameter that controls verbose output is `verbose.lvl`. The default setting of 1 prints minimal progress updates. A setting of 2 includes more information, including the variational lower bound after each greedy addition and backfit. When `verbose.lvl = 3`, updates are printed every time a factor is updated. Finally, `verbose.lvl = -1` can be used to to print a tab-delimited table that can be used in downstream analysis.
-
-The default columns that are printed when `verbose.lvl = 3` show the increase in the variational lower bound and the maximum change in the expected value of the loadings. This output can be customized by passing in a character string. For example, when `verbose.lvl = "O L2 W2 S1"`, then the change in (O)bjective and the maximum change for tissue (L)oadings will be shown (ignoring loadings on rows), as well as (W)hich tissue loading changes the most and the current (S)parsity of the factor (as given by the estimated prior on the loadings on rows).
-
-```{r verbose}
-gtex.verbose <- flashier(gtex, greedy.Kmax = 2, var.type = 1,
-                         verbose.lvl = "O L2 W2 S1")
+```{r no.extrap}
+no.extrapolate.time <- system.time(
+  gtex.no.extrapolate <- flash.init(gtex, var.type = 1) %>%
+    flash.set.verbose(verbose = 0) %>%
+    flash.add.greedy(Kmax = 5) %>%
+    flash.backfit(extrapolate = FALSE) %>%
+    flash.nullcheck()
+)
+c(bf.elbo = gtex.bf$elbo, no.extrapolate.elbo = gtex.no.extrapolate$elbo)
+c(bf = bf.time[3], no.extrapolate = no.extrapolate.time[3])
 ```
 
-Parameters `verbose.fns`, `verbose.colnames`, and `verbose.colwidths` allow further customization of verbose output. As a simple example, I display the name of the tissue that undergoes the maximum change.
+## Use an alternative backfitting approach
+  
+The `flash` function adds factors one at a time in a "greedy" fashion, optimizing them individually along the way, and then optionally performs a final backfit to improve the overall fit. One might instead like to add several factors at once (without optimizing) and then do a single backfit. This can be accomplished using function `flash.init.factors`:
+  
+```{r init.factors}
+gtex.svd <- flash.init(gtex, var.type = 1) %>%
+  flash.init.factors(svd(gtex, nu = 5, nv = 5)) %>%
+  flash.backfit(verbose = 0)
+c(svd.bf.elbo = gtex.svd$elbo, greedy.bf.elbo = gtex.bf$elbo)
 
-```{r verbose2}
-custom.verbose.fn <- function(new, old, k) {
-  tissue.idx <- flashier:::which.max.chg.EF(new, old, k, n = 2)
-  tissue.name <- colnames(gtex)[tissue.idx]
-  ret.str <- paste0(substring(tissue.name, 1, 12), " (", 
-                    as.character(tissue.idx), ")")
-  return(ret.str)
-}
-
-verbose.fns <- c(flashier:::calc.obj.diff,
-                 function(new, old, k) {
-                   flashier:::calc.max.abs.chg.EF(new, old, k, n = 2)
-                 },
-                 custom.verbose.fn)
-verbose.colnames <- c("Obj Diff", "Max Chg (Tiss)", "Which Tissue")
-verbose.colwidths <- c(12, 18, 20)
-
-gtex.verbose2 <- flashier(gtex, greedy.Kmax = 2, var.type = 1,
-                          verbose.lvl = 3, 
-                          verbose.fns = verbose.fns,
-                          verbose.colnames = verbose.colnames,
-                          verbose.colwidths = verbose.colwidths)
+plot.factors(gtex.svd)
 ```
 
+## Add a fixed mean factor
 
-## Using a different convergence criterion
+To capture effects that are equally shared across all tissues (which is essentially what the first factor in the previous fit does), one can use function `flash.fix.factors` to fix a factor where all elements are equal:
 
-The default behavior is to iterate until the variational lower bound increases by no more than $np \sqrt{\epsilon}$ (where $\epsilon$ denotes machine epsilon). The convergence criterion is set by the `conv.crit.fn` parameter, and tolerances are set by parameters `tol`, `backfit.reltol` (for the final backfit), and `inner.backfit.reltol` (for intermediary backfits). 
+```{r fix.mean}
+ones <- matrix(1, nrow = ncol(gtex), ncol = 1)
+init.loadings <- (gtex %*% ones) / sum(ones)
 
-If one is primarily interested in tissue loadings in the `gtex` dataset, then one might like to stop optimization when their normalized absolute values no longer change by more than, say, .001.
+gtex.fix.mean <- flash.init(gtex, var.type = 1) %>%
+  flash.set.verbose(0) %>%
+  flash.init.factors(list(init.loadings, ones)) %>%
+  flash.fix.factors(kset = 1, mode = 2) %>%
+  flash.add.greedy(Kmax = 4) %>%
+  flash.backfit()
+
+plot.factors(gtex.fix.mean)
+```
+
+## Perform semi-nonnegative matrix factorization
+
+In some scenarios, the interpretability of factors can be enhanced by constraining factors to be nonnegative while loadings are left unconstrained. Below, I estimate $g_\ell$ from the family of point-normal priors and $g_f$ from the family of all nonnegative distributions that are unimodal at zero. For priors that constrain loadings or factors, it's important to also supply an appropriate initialization function using parameter `init.fn`. If the factor/loadings pair is initialized very poorly (for example, if loadings are constrained to be nonnegative but are all initialized at negative values), then it can be zeroed out during optimization, which causes fitting to terminate too early.
+
+```{r snmf}
+gtex.snmf <- flash.init(gtex, var.type = 1) %>%
+  flash.set.verbose(0) %>%
+  flash.add.greedy(
+    Kmax = 5,
+    ebnm.fn = c(ebnm::ebnm_point_normal, ebnm::ebnm_unimodal_nonnegative),
+    init.fn = function(f) init.fn.default(f, dim.signs = c(0, 1))
+  ) %>%
+  flash.backfit()
+
+plot.factors(gtex.snmf)
+```
+
+## Fit factors with fixed sparsity patterns
+
+In the fit from the previous section, factor 2 deals primarily with brain tissues, factor 3 with whole blood, spleen, lung, and lymphocytes; factor 4 with heart and muscle tissues; and factor 5 with arterial and esophagal tissues. If we had prior knowledge of these sparsity patterns, we could fix them as follows.
+
+```{r fixed.sprs}
+tissues <- colnames(gtex)
+fixed.factors <- 1L * cbind(
+  rep(TRUE, length(tissues)),
+  grepl("Brain", tissues),
+  grepl("Whole|Spleen|Lung|EBV", tissues),
+  grepl("Heart|Muscle", tissues),
+  grepl("Artery|Esophagus", tissues)
+)
+init.loadings <- (gtex %*% fixed.factors) %*% solve(crossprod(fixed.factors))
+
+gtex.fixed.sprs <- flash.init(gtex, var.type = 1) %>%
+  flash.set.verbose(0) %>%
+  flash.init.factors(list(init.loadings, fixed.factors)) %>%
+  flash.fix.factors(kset = 1:5, mode = 2, is.fixed = (fixed.factors == 0)) %>%
+  flash.backfit()
+
+plot.factors(gtex.fixed.sprs)
+```
+
+## Modify the convergence criterion and verbose output
+
+The default behavior is to iterate until the variational lower bound on the log likelihood (ELBO) increases by no more than $np \sqrt{\epsilon}$ (where $\epsilon$ denotes machine epsilon). The convergence criterion is set by parameter `conv.crit.fn`, and tolerances are set by parameter `tol`. 
+
+If one is primarily interested in the factor values (rather than loadings), then one might like to stop optimization when their normalized absolute values no longer change by more than, say, .001. To confirm that this criterion is respected, I also modify the output printed to console using function `flash.set.verbose`:
 
 ```{r conv.crit}
-gtex.conv.crit <- flashier(gtex, greedy.Kmax = 2, var.type = 1,
-                           conv.crit.fn = function(new, old, k) {
-                             flashier:::calc.max.abs.chg.EF(new, old, k, n = 2)
-                           }, tol = 1e-3, verbose.lvl = "O L2")
+gtex.conv.crit <- flash.init(gtex, var.type = 1) %>%
+  flash.set.verbose(
+    disp.fns = c(display.elbo, display.F.max.chg),
+    colnames = c("ELBO", "Max.Chg.Factors"),
+    colwidths = c(18, 18)
+  ) %>%
+  flash.init.factors(svd(gtex, nu = 5, nv = 5)) %>%
+  flash.backfit(
+    conv.crit.fn = conv.crit.factors,
+    tol = .001
+  )
 ```
 
+## Plot the fit history
 
-## Scheduling backfits
+Setting `verbose = -1` outputs a single tab-delimited table of values that makes it straightforward to analyze fitting progress. The code below backfits with and without extrapolation and then compares the per-iteration ELBO for each fit. (Since `sink` does not play well with R Markdown, this code is not evaluated.)
 
-Backfitting strategies that are more complicated than the simple `"final"` and `"alternating"` schedules can be achieved via the `backfit.after` and `backfit.every` parameters. `flashier` will backfit after the factors specified in `backfit.after` are added, and then after every additional $n$th factor (where $n$ is set by `backfit.every`). For example, one can backfit after the 3rd, 6th, and then every other iteration via the following call.
+```{r plot.history, eval = FALSE}
+sink("zz.tsv")
+tmp <- flash.init(gtex, var.type = 1) %>%
+  flash.set.verbose(-1) %>%
+  flash.init.factors(svd(gtex, nu = 5, nv = 5)) %>%
+  flash.backfit()
+progress.bf <- read.delim("zz.tsv")
+sink()
 
-```{r backfit.schedule}
-gtex.backfit.schedule <- flashier(gtex, greedy.Kmax = 10, 
-                                  backfit.after = c(3, 6),
-                                  backfit.every = 2)
+sink("zz.tsv")
+tmp <- flash.init(gtex, var.type = 1) %>%
+  flash.set.verbose(-1) %>%
+  flash.init.factors(svd(gtex, nu = 5, nv = 5)) %>%
+  flash.backfit(extrapolate = FALSE)
+progress.no.extrapolate <- read.delim("zz.tsv")
+sink()
+
+rm(tmp)
+file.remove("zz.tsv")
+
+progress.bf <- progress.bf %>%
+  mutate(Extrapolate = TRUE) %>%
+  select(Iter, ELBO, Extrapolate)
+
+progress.no.extrapolate <- progress.no.extrapolate %>%
+  group_by(Iter) %>%
+  summarize(ELBO = max(ELBO, na.rm = TRUE)) %>%
+  ungroup() %>%
+  mutate(Extrapolate = FALSE)
+
+tib <- progress.bf %>%
+  bind_rows(progress.no.extrapolate)
+
+ggplot(tib, aes(x = Iter, y = ELBO, col = Extrapolate)) +
+  geom_line() +
+  theme_minimal()
 ```
 
+## Write custom functions that use flash.fit objects 
 
-## Warmstarting backfits
+Since `flash.set.verbose` accepts functions as arguments to parameter `disp.fns`, output is highly customizable. Custom functions should take three parameters as input: `new` (the current `flash.fit` object); `old` (the `flash.fit` object from the previous iteration); and `k` (which gives the index of the factor currently being optimized by `flash.backfit` when `extrapolate = FALSE`). Several getter functions are provided to facilitate working with `flash.fit` objects: for a full list, see the documentation in `?flash.fit`.
 
-Occasionally, a warning will be displayed that indicates that the variational lower bound has decreased after an iteration. In theory, this should not happen. Sometimes, the decrease occurs for numerical reasons, in which case the decrease can safely be ignored. Other times, the algorithm used to optimize the prior parameters fails to find a good solution. In this case, the problem can be mitigated by using warmstarts to initialize the algorithm at the current parameter values.
+For example, let's say that we would like to monitor the sparsity of factors 2-5 (defined as the mixture weight of the pointmass in estimates of priors $g_f$) over the course of a backfit. This can be done as follows:
 
-Note, however, that this solution can in turn cause problems, especially for `ashr`. One of the side effects of providing an initialization to `ash` is that it fixes the mixture grid. For example, if `ash` estimates that a prior has a single mixture component, say,
-$$ \text{Unif}[0, 5.3],$$
-then the prior will effectively remain fixed throughout the entire backfit. (This is a real example that was produced during testing using the `gtex` dataset with nonnegative priors.)
-
-To illustrate some of these issues, I fit 3 factors with nonnegative loadings on tissues.
-
-```{r nonneg}
-gtex.nonnegative <- flashier(gtex, greedy.Kmax = 3, var.type = 1,
-                             prior.family = c(prior.normal.scale.mix(),
-                                              prior.nonnegative()))
-```
-
-By default, `flashier` backfits using warmstarts.
-
-```{r warmstarts}
-warmstarts.time <- system.time(
-  gtex.warmstarts <- flashier(gtex, init = gtex.nonnegative,
-                              fit = "backfit.only", warmstart.backfits = TRUE)
-)
-```
-
-I can turn warmstarts off as follows. 
-
-```{r no.warmstarts}
-no.warmstarts.time <- system.time(
-  gtex.no.warmstarts <- flashier(gtex, init = gtex.nonnegative,
-                                 fit = "backfit.only", warmstart.backfits = FALSE)
-)
-```
-
-```{r warmstart.compare}
-c(no.warmstarts.time[3], warmstarts.time[3])
-c(gtex.no.warmstarts$elbo, gtex.warmstarts$elbo)
-```
-
-
-## Fitting same-sign priors 
-
-Parameter `output.lvl` determines the form of the returned list. In most cases, the default `output.lvl = 2` will do. The other important setting is `output.lvl = 0`, which causes `flashier` to return a flash fit that is entirely free from post-processing and can be fed directly into subsequent `flashier` calls. This can save time in complex flash fits that involve repeated calls to `flashier`.
-
-As an example, I implement "same-sign" priors. The idea, suggested to me by Matthew Stephens, is to put nonnegative priors on rows and then allow priors on tissues to be either nonnegative or nonpositive. This might be especially useful in nonnegative matrix factorization since it provides a mechanism to correct for "mistakes" made in factors added early on. (Since later factors can only ever increase the fitted values, it becomes very difficult to correct for an overambitious factor.) This approach makes less sense for the `gtex` matrix of $z$-scores, but it is nonetheless interesting to observe that tissue loadings are very similar regardless of whether they represent positive effects or negative ones.
-
-```{r same.sign}
-greedy.Kmax <- 6
-fl <- NULL
-for (k in 1:greedy.Kmax) {
-  nn.fl <- flashier(gtex, init = fl, greedy.Kmax = 1, var.type = 1,
-                     prior.family = prior.nonnegative(),
-                     output.lvl = 0, verbose.lvl = 0)
-  np.fl <- flashier(gtex, init = fl, greedy.Kmax = 1, var.type = 1,
-                     prior.family = c(prior.nonnegative(), 
-                                      prior.nonpositive()),
-                     output.lvl = 0, verbose.lvl = 0)
-  if (nn.fl$obj > np.fl$obj) {
-    cat("Nonnegative factor added. Objective: ",
-        formatC(nn.fl$obj, format = "f", digits = 2), "\n", sep = "")
-    fl <- nn.fl
-  } else {
-    cat("Nonpositive factor added. Objective: ",
-        formatC(np.fl$obj, format = "f", digits = 2), "\n", sep = "")
-    fl <- np.fl
-  }
+```{r custom}
+disp.sparsity <- function(new, old, k, f.idx) {
+  g <- ff.g(new, k, n = 2) # setting n = 2 gets g_f (n = 1 would get g_\ell)
+  return(g[[f.idx]]$pi[1])
 }
-# A final call to get a nice "flash" object rather than a "flash.fit" object.
-gtex.same.signs <- flashier(init = fl, greedy.Kmax = 0)
-plot.tissue.loadings(gtex.same.signs)
+disp.sprs2 <- function(new, old, k) disp.sparsity(new, old, k, 2)
+disp.sprs3 <- function(new, old, k) disp.sparsity(new, old, k, 3)
+disp.sprs4 <- function(new, old, k) disp.sparsity(new, old, k, 4)
+disp.sprs5 <- function(new, old, k) disp.sparsity(new, old, k, 5)
+
+gtex.sprs <- flash.init(gtex, var.type = 1) %>%
+  flash.set.verbose(
+    disp.fns = c(display.elbo, disp.sprs2, disp.sprs3, disp.sprs4, disp.sprs5),
+    colnames = c("ELBO", paste0("Sparsity (", 2:5, ")")),
+    colwidths = rep(14, 5)
+  ) %>%
+  flash.init.factors(svd(gtex, nu = 5, nv = 5)) %>%
+  flash.backfit()
+```
+
+## Write custom EBNM functions
+
+When very specialized prior families are required, then custom EBNM functions may be created: for details, see the documentation in `?as.ebnm.fn`. To ensure that the return object is correctly formatted, it's often simplest to call into function `ebnm` from package `ebnm` before returning. Below, I create an EBNM function where the prior family $\mathcal{G}$ is the family of two-component distributions where one component is a pointmass at zero and the other is a normal distribution (not necessarily centered at zero): 
+
+```{r custom.ebnm}
+ebnm.custom <- function(x, s, g_init, fix_g, output) {
+  if (!fix_g) {
+    # Parameters are mixture wt on pointmass and mean/sd of normal:
+    neg.llik <- function(par) {
+      g <- ashr::normalmix(c(par[1], 1 - par[1]), c(0, par[2]), c(0, par[3]))
+      ebnm.res <- ebnm::ebnm_normal_scale_mixture(x, s, g_init = g, fix_g = FALSE)
+      return(-ebnm.res$log_likelihood)
+    }
+    
+    opt.res <- optim(
+      c(0.5, 0, 1), 
+      neg.llik, 
+      method = "L-BFGS-B", 
+      lower = c(0, -Inf, 0.01), 
+      upper = c(1, Inf, Inf)
+    )
+    
+    par <- opt.res$par
+    g_init <- ashr::normalmix(c(par[1], 1 - par[1]), c(0, par[2]), c(0, par[3]))
+  }
+  
+  ebnm.res <- ebnm::ebnm_normal_scale_mixture(
+    x, 
+    s, 
+    g_init = g_init, 
+    fix_g = fix_g, 
+    output = output
+  )
+  
+  return(ebnm.res)
+}
+
+gtex.custom <- flash.init(gtex, var.type = 1) %>%
+  flash.set.verbose(0) %>%
+  flash.add.greedy(
+    Kmax = 3,
+    ebnm.fn = c(ebnm::ebnm_point_normal, ebnm.custom)
+  )
+
+gtex.custom$F.ghat
 ```
